removing margin on listing teaser so content and buttons align correctly

--- a/opentech/static_src/src/sass/public/components/_listing.scss
+++ b/opentech/static_src/src/sass/public/components/_listing.scss
@@ -82,6 +82,12 @@
     &__teaser {
         font-weight: $weight--normal;
         color: $color--default;
+
+        @include media-query(mob-landscape) {
+            .listing--not-a-link & {
+                margin: 0;
+            }
+        }
     }
 
     &__meta {
